--- a/PredictForces/PredictForces.vcxproj.filters
+++ b/PredictForces/PredictForces.vcxproj.filters
@@ -14,4 +14,41 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ProAnalysis.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="method.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="addstr.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Pro.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="read_pdb.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="ProAnalysis.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="method.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="addstr.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Pro.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="read_pdb.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
