--- a/PredictForces/PredictForces.vcxproj
+++ b/PredictForces/PredictForces.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -70,7 +70,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\public\eigen-3.3.7;$(IncludePath)</IncludePath>
+    <IncludePath>C:\public\eigen-3.3.7;C:\public\boost;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>C:\public\eigen-3.3.7;$(IncludePath)</IncludePath>
@@ -126,14 +126,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="addstr.h" />
     <ClInclude Include="method.h" />
     <ClInclude Include="Pro.h" />
     <ClInclude Include="ProAnalysis.h" />
     <ClInclude Include="read_pdb.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="addstr.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="method.cpp" />
     <ClCompile Include="Pro.cpp" />
