--- a/PredictForces/PredictForces.vcxproj.filters
+++ b/PredictForces/PredictForces.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="read_pdb.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="manageIO.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ProAnalysis.cpp">
@@ -42,6 +45,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="read_pdb.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="manageIO.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
