--- a/PredictForces/PredictForces.vcxproj
+++ b/PredictForces/PredictForces.vcxproj
@@ -70,11 +70,11 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\public\eigen-3.3.7;C:\public\boost-1.69.0;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\public\boost-1.69.0\stage\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\public\boost;C:\public\eigen;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\public\boost\stage\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>C:\public\boost;C:\public\eigen</IncludePath>
+    <IncludePath>C:\public\boost;C:\public\eigen;$(IncludePath)</IncludePath>
     <LibraryPath>C:\public\boost\stage\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
