--- a/PredictForces/PredictForces.vcxproj.filters
+++ b/PredictForces/PredictForces.vcxproj.filters
@@ -27,13 +27,13 @@
     <ClInclude Include="read_pdb.h">
       <Filter>header</Filter>
     </ClInclude>
-    <ClInclude Include="handle_io.h">
-      <Filter>header</Filter>
-    </ClInclude>
     <ClInclude Include="Minimization.h">
       <Filter>header</Filter>
     </ClInclude>
     <ClInclude Include="defines.h">
+      <Filter>header</Filter>
+    </ClInclude>
+    <ClInclude Include="HandleMessage.h">
       <Filter>header</Filter>
     </ClInclude>
   </ItemGroup>
@@ -53,10 +53,10 @@
     <ClCompile Include="read_pdb.cpp">
       <Filter>source</Filter>
     </ClCompile>
-    <ClCompile Include="handle_io.cpp">
+    <ClCompile Include="Minimization.cpp">
       <Filter>source</Filter>
     </ClCompile>
-    <ClCompile Include="Minimization.cpp">
+    <ClCompile Include="HandleMessage.cpp">
       <Filter>source</Filter>
     </ClCompile>
   </ItemGroup>
